--- a/package.json
+++ b/package.json
@@ -29,7 +29,7 @@
     "angular-route": "1.4.9",
     "bcrypt-nodejs": "0.0.3",
     "body-parser": "^1.12.0",
-    "bootstrap": "3.3.6",
+    "bootstrap": "^4.1.0",
     "crypto": "0.0.3",
     "ejs": "2.5.5",
     "express": "^4.12.0",
